# mundial

./: .dockerignore  .gitignore  Dockerfile  README.md  actualizar.sh  actualizar_fixtures.py  actualizar_torneo.py  correcion.py  debug_knn.csv  debug_perfiles.csv  docker-compose.yml  extraer.py  extraer_arbitros.py  extraer_bios.py  extraer_convocatorias.py  extraer_designaciones.py  extraer_elo_mundo.py  extraer_fechas.py  extraer_plantillas.py  extraer_reparto_mitades.py  extraer_resultados.py  extraer_tarjetas.py  generar_cron.py  notificar.py  predicciones_resumen.csv  predictor_mundial_2026.R  pyproject.toml  resultados.py  run_actualizacion.py
data/: README.md  ajuste_bajas.csv  arbitro_equipos.csv  arbitro_ids.csv  arbitros.csv  arbitros_mundial.csv  backtest_resultados.csv  bios.csv  calendario.csv  calendario_completo.csv  convocatorias.csv  cuadro_terceros.csv  cuotas_mercado.csv  elo_2026.csv  elo_mundo.csv  equipos_excluidos.csv  grupos_oficiales.csv  marcadores_py.csv  partido_fechas.csv  partidos_a_predecir.csv  predicciones_resumen_py.csv  probabilidades_torneo.csv  rendimiento_mercados.csv  reparto_mitades.csv  stats_final.csv  tarjetas.csv  telemetria_final.csv
deploy/: Caddyfile  Caddyfile.docker  DEPLOY.md  actualizar_docker.sh  deploy.sh  docker-entrypoint.sh  generar_crontab.py  mundial-web.service
docs/: backtest_baseline.md
predictor/: __init__.py  backtest.py  bajas.py  cli.py  config.py  dataset.py  markets.py  metrics.py  odds_theoddsapi.py  pipeline.py  players.py  pool.py  rendimiento.py  simulate.py  sofascore.py  strength.py  style.py  (+2 more)
(+79 files in other folders)
