[project]
name = "mundial-predictor"
version = "0.1.0"
description = "Predictor probabilístico de mercados del Mundial 2026 (port Python del motor R)"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0",
    "pandas>=2.2",
    "scipy>=1.13",
    "scikit-learn>=1.5",
    "statsmodels>=0.14",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
mundial-predict = "predictor.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["predictor*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
